# datasette-events-forward

./: README.md  pyproject.toml
.github/workflows/: publish.yml
datasette_events_forward/: __init__.py
tests/: test_events_forward.py
